--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.14",
     "@clerk/nextjs": "^6.18.5",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
@@ -58,14 +59,19 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.6",
+    "ai": "^4.3.13",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "highlight.js": "^11.11.1",
     "ignore": "^7.0.4",
     "input-otp": "^1.4.2",
+    "limiter": "^3.0.0",
     "lucide-react": "^0.507.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
@@ -75,6 +81,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^3.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
