--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-md-editor": "^4.0.6",
     "ai": "^4.3.13",
+    "assemblyai": "^4.12.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.6.1",
     "highlight.js": "^11.11.1",
     "ignore": "^7.0.4",
     "input-otp": "^1.4.2",
@@ -77,8 +79,10 @@
     "next-themes": "^0.4.6",
     "octokit": "^4.1.3",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^3.0.0",
     "react-syntax-highlighter": "^15.6.1",
