--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.10.5",
     "highlight.js": "^11.11.1",
     "ignore": "^7.0.4",
     "input-otp": "^1.4.2",
@@ -93,6 +94,7 @@
     "stripe": "^18.1.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.176.0",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.3"
@@ -103,6 +105,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/three": "^0.176.0",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "postcss": "^8.5.3",
