--- a/package.json
+++ b/package.json
@@ -118,6 +118,15 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
+  "optionalDependencies": {
+    "@esbuild/darwin-arm64": "^0.19.0",
+    "@esbuild/darwin-x64": "^0.19.0",
+    "@esbuild/linux-x64": "^0.19.0",
+    "lightningcss-darwin-arm64": "^1.21.5",
+    "lightningcss-darwin-x64": "^1.21.5",
+    "lightningcss-linux-x64-gnu": "^1.21.5",
+    "lightningcss-linux-arm64-gnu": "^1.21.5"
+  },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
   }
