--- a/package.json
+++ b/package.json
@@ -116,7 +116,8 @@
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "lightningcss-linux-x64-gnu": "^1.21.5"
   },
   "optionalDependencies": {
     "@esbuild/darwin-arm64": "^0.19.0",
