--- a/package.json
+++ b/package.json
@@ -116,17 +116,7 @@
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0",
-    "lightningcss-linux-x64-gnu": "^1.21.5"
-  },
-  "optionalDependencies": {
-    "@esbuild/darwin-arm64": "^0.19.0",
-    "@esbuild/darwin-x64": "^0.19.0",
-    "@esbuild/linux-x64": "^0.19.0",
-    "lightningcss-darwin-arm64": "^1.21.5",
-    "lightningcss-darwin-x64": "^1.21.5",
-    "lightningcss-linux-x64-gnu": "^1.21.5",
-    "lightningcss-linux-arm64-gnu": "^1.21.5"
+    "typescript-eslint": "^8.27.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
