--- a/package.json
+++ b/package.json
@@ -120,5 +120,15 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
+  },
+  "overrides": {
+    "@langchain/community": {
+      "ignore": "$ignore"
+    }
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/community>ignore": "$ignore"
+    }
   }
 }
